--- a/src/features/Products/components/ProductsGrid/ProductCard/style.scss
+++ b/src/features/Products/components/ProductsGrid/ProductCard/style.scss
@@ -1,8 +1,7 @@
 .ws-product-card {
-
-  img {
-    background-color: #D9D9D9;
-    padding: 30px 30px 50px 30px;
+  
+  .ws-product-card-content {
+    background-color: whitesmoke;
   }
 
   .ws-product-type-price {
@@ -13,27 +12,6 @@
     .ws-product-price {
       font-weight: 500;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-  }
-
-  .ws-product-card-hover-banner {
-    background-color: #1E2832;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 40px;
-    margin-top: -40px;
-
-    button {
-      color: white;
-      border-color: white;
-      height: 30px;
-      font-size: 10px;
-    }
-
-    div.MuiChip-root.MuiChip-outlined.MuiChip-colorInfo {
-      color: orange;
-      border-color: orange;
     }
   }
 }
